AG-3390 - Fix Pipeline, Changelog, & What's new responsive layout bug

--- a/documentation/ag-grid-docs/src/design-system/modules/pipelineChangelog.module.scss
+++ b/documentation/ag-grid-docs/src/design-system/modules/pipelineChangelog.module.scss
@@ -6,6 +6,10 @@
     margin-bottom: calc($spacing-size-12 * 2.5);
 
     @media screen and (min-width: $breakpoint-docs-nav-medium) {
+        width: calc(var(--layout-width-9-12));
+    }
+
+    @media screen and (min-width: $breakpoint-docs-nav-large) {
         width: calc(var(--layout-width-9-12) + $spacing-size-16);
     }
 
